--- a/HotdAmn/Interface/Preferences/PrefsAppearance.xib
+++ b/HotdAmn/Interface/Preferences/PrefsAppearance.xib
@@ -209,7 +209,7 @@
 						<string key="NSFrame">{{172, 259}, {123, 26}}</string>
 						<reference key="NSSuperview" ref="676335128"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="569520784"/>
 						<string key="NSReuseIdentifierKey">_NS:179</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSPopUpButtonCell" key="NSCell" id="653318851">
@@ -423,8 +423,8 @@
 							<reference ref="283173782"/>
 							<reference ref="616325734"/>
 							<reference ref="486059523"/>
-							<reference ref="383763066"/>
 							<reference ref="453828552"/>
+							<reference ref="383763066"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -648,7 +648,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">39</int>
+			<int key="maxID">65</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
